fixed hero cta, fs, and items alignment

--- a/frontend/src/styles/home-page.scss
+++ b/frontend/src/styles/home-page.scss
@@ -13,9 +13,11 @@
 	// scoped styles
 	.home-hero {
 		min-height: 80vh;
-
 		position: relative;
 		background: linear-gradient(rgba(22, 42, 62, 0.79), rgba(22, 42, 62, 0.79));
+		display: grid;
+		place-items: center;
+		padding: 1em;
 
 		.hero-bg {
 			position: absolute;
@@ -26,35 +28,29 @@
 		}
 
 		.hero-cta {
-			// border: 1px solid $secondary;
 			background: $secondary;
 			color: white;
 			border: none;
 			outline: none;
 			font-weight: 700;
 			font-size: 1.2rem;
-			padding: 16px 32px;
-			// width: 250px;
-			// height: 60px;
+			padding: 1rem 2rem;
 			border-radius: 4px;
+
+			@media screen and (min-width: 993px) {
+				padding: 1.5rem 3rem;
+				font-size: 1.5rem;
+			}
 		}
 
 		&-inner {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			padding: 1em;
-			padding-top: 3em;
-
 			h4 {
 				font-weight: 700;
-				font-size: 1.5rem;
+				font-size: 2rem;
 				line-height: 185.69%;
-				letter-spacing: -0.005em;
 
-				@media screen and (min-width: 800px) {
-					font-size: 3rem;
+				@media screen and (min-width: 992px) {
+					font-size: 4rem;
 				}
 			}
 		}
@@ -71,7 +67,7 @@
 			}
 		}
 
-		@media screen and (min-width: 800px) {
+		@media screen and (min-width: 992px) {
 			padding-right: 0;
 
 			&-inner {
@@ -115,7 +111,7 @@
 			}
 		}
 
-		// @media screen and (min-width: 800px) {
+		// @media screen and (min-width: 992px) {
 		// 	padding: 2em;
 
 		// 	&-inner {
@@ -154,7 +150,7 @@
 				font-size: 1rem;
 				padding: 0 3em;
 
-				@media screen and (min-width: 900px) {
+				@media screen and (min-width: 992px) {
 					font-size: 2rem;
 					padding: 0 6em;
 				}
@@ -232,12 +228,12 @@
 					}
 				}
 
-				@media screen and (min-width: 800px) {
+				@media screen and (min-width: 992px) {
 					margin-bottom: 0;
 				}
 			}
 
-			@media screen and (min-width: 800px) {
+			@media screen and (min-width: 992px) {
 				display: grid;
 				grid-template-columns: repeat(3, 1fr);
 				gap: 1em;
@@ -266,12 +262,12 @@
 					flex: 1;
 				}
 
-				@media screen and (min-width: 900px) {
+				@media screen and (min-width: 992px) {
 					margin-bottom: 0;
 				}
 			}
 
-			@media screen and (min-width: 800px) {
+			@media screen and (min-width: 992px) {
 				display: flex;
 				gap: 4em;
 
