--- a/frontend/src/styles/product-card.scss
+++ b/frontend/src/styles/product-card.scss
@@ -40,7 +40,7 @@
 		box-shadow: 0px 5px 12px 3px rgba(0, 0, 0, 0.35);
 	}
 
-	@media screen and (min-width: 800px) {
+	@media screen and (min-width: 992px) {
 		margin-bottom: 0;
 	}
 }
